# opentelemetry-resourcedetector-gcp-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.rst
scripts/: lint.sh  test.sh
src/: constants.rs  error.rs  get_val.rs  lib.rs  mapping.rs  test_detector.rs  test_envs.rs  test_mapping.rs
