[package]
name = "opentelemetry-resourcedetector-gcp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

# reqwest
reqwest = { version = "0.12.5", features = [
  "rustls-tls",
  "charset",
  "http2",
  "macos-system-configuration",
  "json",
] }

# tokio = { version = "1.38", features = ["full"] }
# tokio-util = "0.7.11"
# tokio-stream = { version = "0.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging / tracing
tracing = "0.1"
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }

tracing-json2 = { git = "https://github.com/sre-university/tracing-json2.git", package = "tracing-json", features = [
  "derive",
] }

#
opentelemetry = { version="0.24", features = ["metrics"] }
opentelemetry_sdk = { version="0.24", features = ["metrics", "rt-tokio"] }
pretty_assertions = "1.4.0"
pretty_assertions_sorted = "1.2.3"
regex = "1.10.5"
once_cell = "1.19.0"
