[package]
name = "opentelemetry_resourcedetector_gcp_rust"
version = "0.7.0"
description = "This library provides support for detecting GCP resources like GCE, GKE, etc."
homepage = "https://github.com/Sergo007/opentelemetry-resourcedetector-gcp-rust"
repository = "https://github.com/Sergo007/opentelemetry-resourcedetector-gcp-rust"
keywords = ["opentelemetry", "gcp", "resource", "detector"]
authors = [
    "Serhii <yatsyna.sergey@gmail.com>"
]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]

# reqwest
reqwest = { version = "0.12.5", features = [
  # "rustls-tls",
  "charset",
  "http2",
  "macos-system-configuration",
  "json",
] }

# tokio = { version = "1.38", features = ["full"] }
# tokio-util = "0.7.11"
# tokio-stream = { version = "0.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging / tracing
tracing = "0.1"

#
opentelemetry = { version="0.24", features = ["metrics"] }
opentelemetry_sdk = { version="0.24", features = ["metrics"] }
pretty_assertions = "1.4.0"
pretty_assertions_sorted = "1.2.3"
regex = "1.10.5"
once_cell = "1.19.0"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]